# gnuplotC

./: .gitignore  CMakeLists.txt  README.md  gnuplotc.c  gnuplotc.h  plot.c  plot.h
example/: Makefile  compile_and_run.sh  example  example.c  example_omp  sphere.plt
example/GNUPLOT_TEMPLATES_TMP/: frame_0001.plt  frame_0002.plt  frame_0003.plt  frame_0004.plt  frame_0005.plt  frame_0006.plt  frame_0007.plt  frame_0008.plt  frame_0009.plt  frame_0010.plt  frame_0011.plt  frame_0012.plt  frame_0013.plt  frame_0014.plt  frame_0015.plt  frame_0016.plt  frame_0017.plt  frame_0018.plt  frame_0019.plt  frame_0020.plt  frame_0021.plt  frame_0022.plt  frame_0023.plt  frame_0024.plt  frame_0025.plt  frame_0026.plt  frame_0027.plt  frame_0028.plt  frame_0029.plt  frame_0030.plt  frame_0031.plt  frame_0032.plt  frame_0033.plt  frame_0034.plt  frame_0035.plt  frame_0036.plt  frame_0037.plt  frame_0038.plt  frame_0039.plt  frame_0040.plt  (+33 more)
